--- a/package.json
+++ b/package.json
@@ -4,25 +4,28 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview",
+    "dev": "vite frontend --host 0.0.0.0",
+    "build": "vite build frontend",
+    "preview": "vite preview frontend",
     "server": "node backend/server.js"
   },
   "dependencies": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "express": "^4.19.2",
+    "cheerio": "^1.0.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "express-rate-limit": "^8.2.1",
+    "fetch-cookie": "^3.0.1",
     "jsonwebtoken": "^9.0.2",
     "node-fetch": "^3.3.2",
-    "cheerio": "^1.0.0",
     "puppeteer": "^22.15.0",
-    "tough-cookie": "^4.1.3",
-    "fetch-cookie": "^3.0.1",
-    "cors": "^2.8.5"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "tough-cookie": "^4.1.3"
   },
   "devDependencies": {
-    "vite": "^5.4.8"
+    "@rollup/rollup-win32-x64-msvc": "^4.53.1",
+    "rollup": "^4.53.1",
+    "vite": "^5.4.21"
   }
 }
