--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.19.2",
     "express-rate-limit": "^8.2.1",
     "fetch-cookie": "^3.0.1",
+    "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "node-fetch": "^3.3.2",
     "puppeteer": "^22.15.0",
