--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "vite frontend --host 0.0.0.0",
     "build": "vite build frontend",
     "preview": "vite preview frontend",
-    "server": "node backend/server.js"
+    "server": "node backend/server.js",
+    "lint": "eslint . --ext .js,.jsx --ignore-path .gitignore",
+    "lint:fix": "eslint . --ext .js,.jsx --fix --ignore-path .gitignore"
   },
   "dependencies": {
     "cheerio": "^1.0.0",
@@ -26,7 +28,11 @@
     "tough-cookie": "^4.1.3"
   },
   "devDependencies": {
+    "@eslint/js": "^9.39.1",
     "@rollup/rollup-win32-x64-msvc": "^4.53.1",
+    "eslint": "^9.39.1",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^7.0.1",
     "rollup": "^4.53.1",
     "vite": "^5.4.21"
   }
