chore: add .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,11 @@
-﻿SECRET=your-jwt-secret-here
+﻿# Production-ready environment variables (example)
+
+SECRET=your-jwt-secret-here-min-32-chars
+
 PORT=3000
+
 NODE_ENV=production
-FRONTEND_URL=http://localhost:5173
+
+FRONTEND_URL=https://your-frontend-domain.com,http://localhost:5173
+
+VITE_API=https://your-backend-domain.com
