--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "server": "node backend/server.js",
     "test": "vitest run",
     "test:watch": "vitest",
-    "lint": "eslint . --ext .js,.jsx --ignore-path .gitignore",
-    "lint:fix": "eslint . --ext .js,.jsx --fix --ignore-path .gitignore"
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
   },
   "dependencies": {
     "cheerio": "^1.0.0",
@@ -27,7 +27,8 @@
     "puppeteer": "^22.15.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "tough-cookie": "^4.1.3"
+    "tough-cookie": "^4.1.3",
+    "winston": "^3.18.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
