--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,3 @@
-﻿# Production-ready environment variables (example)
+SENTRY_DSN=
+LOG_LEVEL=info
 
-SECRET=your-jwt-secret-here-min-32-chars
-
-PORT=3000
-
-NODE_ENV=production
-
-FRONTEND_URL=https://your-frontend-domain.com,http://localhost:5173
-
-VITE_API=https://your-backend-domain.com
