Add all project files: SBMCH Attendance app with database storage, deployment configs

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,18 @@
-SENTRY_DSN=
-LOG_LEVEL=info
+# Frontend API URL configuration (optional)
+# Uncomment for Create React App projects
+# REACT_APP_API_URL=http://localhost:3000
 
+# Vite (default for this project)
+VITE_API_URL=http://localhost:3000
+
+# Backend configuration
+DATABASE_URL=postgresql://USER:PASSWORD@HOST:PORT/DB
+JWT_SECRET=replace_with_long_random_string
+SCRAPER_URL=http://localhost:4000
+SCRAPER_TIMEOUT_MS=3000
+PORT=3000
+ALLOW_CREATE_IF_SCRAPER_DOWN=false
+ADMIN_API_KEY=changeme
+
+# Dev utilities
+MOCK_SCRAPER_PORT=4000
