--- a/package.json
+++ b/package.json
@@ -11,24 +11,33 @@
     "test": "vitest run",
     "test:watch": "vitest",
     "lint": "eslint .",
-    "lint:fix": "eslint . --fix"
+    "lint:fix": "eslint . --fix",
+    "webhook:test": "node backend/tools/webhookTest.js",
+    "subscription:test": "node backend/tools/testSubscriptionFlow.js"
   },
   "dependencies": {
     "@sentry/node": "^10.25.0",
-    "cheerio": "^1.0.0",
+    "axios": "^1.13.2",
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
+    "cheerio": "^1.1.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-rate-limit": "^8.2.1",
     "express-validator": "^7.3.0",
-    "fetch-cookie": "^3.0.1",
+    "fetch-cookie": "^3.1.0",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
+    "node-cron": "^3.0.3",
     "node-fetch": "^3.3.2",
+    "nodemailer": "^7.0.10",
+    "pg": "^8.12.0",
     "puppeteer": "^22.15.0",
+    "razorpay": "^2.9.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "tough-cookie": "^4.1.3",
+    "tough-cookie": "^4.1.4",
     "winston": "^3.18.3"
   },
   "devDependencies": {
