--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
-  "buildCommand": "sh -c 'cd frontend && npm install && npm run build'",
-  "outputDirectory": "frontend/dist",
+  "buildCommand": "npm ci && npm run build",
+  "outputDirectory": "dist",
   "framework": "vite",
   "rewrites": [
     {
