--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,9 +4,8 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "build:css": "postcss ./src/styles/globals.css -o ./public/css/tailwind.css --minify",
     "dev": "vite",
-    "build": "npm run build:css && vite build",
+    "build": "vite build",
     "preview": "vite preview --port 5000"
   },
   "dependencies": {
@@ -14,11 +13,6 @@
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.1.17",
-    "autoprefixer": "^10.4.22",
-    "postcss": "^8.5.6",
-    "postcss-cli": "^11.0.1",
-    "tailwindcss": "^4.1.17",
     "vite": "^7.2.2"
   }
 }
