--- a/vercel.json
+++ b/vercel.json
@@ -2,10 +2,19 @@
   "buildCommand": "npm ci && npm run build",
   "outputDirectory": "dist",
   "framework": "vite",
+
   "rewrites": [
     {
       "source": "/(.*)",
       "destination": "/index.html"
+    }
+  ],
+
+  "redirects": [
+    {
+      "source": "/",
+      "destination": "https://maintainence-pied.vercel.app/",
+      "permanent": false
     }
   ]
 }
