--- a/vercel.json
+++ b/vercel.json
@@ -1,19 +1,12 @@
+
 {
   "buildCommand": "npm ci && npm run build",
   "outputDirectory": "dist",
   "framework": "vite",
-
-  "rewrites": [
-    {
-      "source": "/(.*)",
-      "destination": "/index.html"
-    }
-  ],
-
   "redirects": [
     {
-      "source": "/",
-      "destination": "https://maintainence-pied.vercel.app/",
+      "source": "/(.*)",
+      "destination": "https://YOUR-TARGET-VERCEL-DOMAIN.vercel.app",
       "permanent": false
     }
   ]
